# PharmaStateModels_LSTM

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: base.yaml
data/raw/: cj_2023.csv
docs/: pipeline.drawio  project_overview.md
knime/: workflow_notes.md
src/pharma_state_models/: __init__.py  config.py
src/pharma_state_models/data/: __init__.py  ingestion.py  preprocessing.py  preprocessing_preliminary.py  preprocessing_timeseries.py  schemas.py
src/pharma_state_models/evaluation/: metrics.py
src/pharma_state_models/features/: __init__.py  sequence_builder.py
src/pharma_state_models/inference/: __init__.py  predictor.py
src/pharma_state_models/models/: lstm_model.py
src/pharma_state_models/pipelines/: score_pipeline.py  train_pipeline.py
src/pharma_state_models/training/: trainer.py
src/pharma_state_models/utils/: io.py
